--- a/_includes/about.html
+++ b/_includes/about.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Welcome to my data-driven playground! 🚀 I'm a relentless problem-solver and devoted Data Scientist on a mission to conquer business challenges through the magic of data. With a wizardry in analytics, I transform raw data into strategic gems, crafting success stories that speak volumes. Dive into the world where algorithms meet creativity, and let's sculpt your data into a masterpiece of insights. Ready to turn complexity into clarity? Let's embark on this journey together! #DataAlchemy #AnalyticsMaestro #BusinessSolutionsMagician</h3>
                 </div>
             </div>
             <div class="row">
@@ -16,11 +16,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                    <h4>2021-2022</h4>
+                                    <h4 class="subheading">My Humble Beginnings</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">In 2021-2022 at TheMathCo, I immersed myself in the world of US Retail/Entertainment. My role as an Analyst involved orchestrating impactful marketing campaigns, executing ad-hoc analyses, and crafting insightful weekly reports. The highlight was tackling the challenge of multiple dashboards by engineering a comprehensive one-stop solution in Tableau. We streamlined data with SQL, ensured precision with QC trackers, and brought KPIs together seamlessly. A triumph in efficiency!</p>
                                 </div>
                             </div>
                         </li>
@@ -30,15 +30,15 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
+                                    <h4>2022-2023</h4>
+                                    <h4 class="subheading">Analytics Roller coaster ride</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Fast forward to 2022-2023, where I was prmoted as an Associate and delved into the realm of a European Sports/Athletic Apparel giant. Here, I took the reins of a project singularly focused on uncovering key Profitability Metrics. Driving client calls, deciphering requirements, and shaping suggestions based on data availability became second nature. I dove into the depths of customer behavior, sculpting detailed profiles from their activity to enrich decision-making.</p>
                                 </div>
                             </div>
                         </li>
-                        <li>
+<!--                         <li>
                             <div class="timeline-image">
                                 <img class="img-circle img-responsive" src="img/about/3.jpg" alt="">
                             </div>
@@ -65,11 +65,12 @@
                                     <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
                                 </div>
                             </div>
-                        </li>
+                        </li> -->
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>Be Part
-                                    <br>Of Our
+                                <h4> So far 
+                                    my journey!
+                                    <br>
                                     <br>Story!</h4>
                             </div>
                         </li>
