--- a/_includes/about.html
+++ b/_includes/about.html
@@ -34,7 +34,7 @@
                                     <h4 class="subheading">Analytics Roller coaster ride</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Fast forward to 2022-2023, where I was prmoted as an Associate and delved into the realm of a European Sports/Athletic Apparel giant. Here, I took the reins of a project singularly focused on uncovering key Profitability Metrics. Driving client calls, deciphering requirements, and shaping suggestions based on data availability became second nature. I dove into the depths of customer behavior, sculpting detailed profiles from their activity to enrich decision-making.</p>
+                                    <p class="text-muted">Fast forward to 2022-2023, where I was promoted as an Associate and delved into the realm of a European Sports/Athletic Apparel giant. Here, I took the reins of a project singularly focused on uncovering key Profitability Metrics. Driving client calls, deciphering requirements, and shaping suggestions based on data availability became second nature. I dove into the depths of customer behavior, sculpting detailed profiles from their activity to enrich decision-making.</p>
                                 </div>
                             </div>
                         </li>
